# demo_phases

./: .bazelignore  .bazelrc  .gitignore  ARCHITECTURE.md  BUILD.bazel  CMakeLists.txt  CONCEPTS_GUIDE.md  CONCEPTS_SUMMARY.md  DEPENDENCY_VERIFICATION.md  LIMIT_NODE_REFACTOR.md  LOGICAL_PARAMS_REFACTOR.md  MODULE.bazel  MULTI_TYPE_DEMO.md  Makefile  NODE_PIPELINE_GUIDE.md  NODE_TRANSFORMER_GUIDE.md  PIPELINE_FILES.md  README.md  REFACTORING_SUMMARY.md  REGISTRATION_GUIDE.md  TRANSFORMER_PATTERN.md  TYPE_SPECIFIC_PARAMS.md  bazel-bin  bazel-out  bazel-testlogs  bazel-toy_cpp
.github/: copilot-instructions.md
.github/workflows/: ci.yml
include/: ast_node.h  ast_node_types.def  ast_params.h  ast_to_logical_transformer.h  limit_params.h  logical_node.h  logical_params.h  node_transformer.h  param_type.h  parse_node.h  parse_node_concepts.h
src/: CMakeLists.txt  ast_node.cpp  ast_to_logical_transformer.cpp  logical_node.cpp  main.cpp  node_transformer.cpp  parse_node.cpp
src/ast_nodes/: bar_ast_node.cpp  bar_ast_node.h  foo_ast_node.cpp  foo_ast_node.h  limit_ast_node.cpp  limit_ast_node.h  set_metadata_ast_node.cpp  set_metadata_ast_node.h  sort_ast_node.cpp  sort_ast_node.h
src/ast_params/: bar_ast_params.h  foo_ast_params.h  limit_params.h  set_metadata_params.h  sort_params.h
src/logical_nodes/: bar_logical_node.cpp  bar_logical_node.h  foo_logical_node.cpp  foo_logical_node.h  limit_logical_node.cpp  limit_logical_node.h  set_metadata_logical_node.cpp  set_metadata_logical_node.h  sort_logical_node.cpp  sort_logical_node.h
src/logical_params/: bar_logical_params.h  foo_logical_params.h
src/parse_nodes/: bar_node.cpp  bar_node.h  foo_node.cpp  foo_node.h  limit_node.cpp  limit_node.h  set_metadata_node.cpp  set_metadata_node.h  sort_node.cpp  sort_node.h
tests/: CMakeLists.txt  test_lib.cpp
