"""Root BUILD file for toy_cpp."""

# Base parameter type
cc_library(
    name = "param_type",
    hdrs = ["include/param_type.h"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)

# Parameter struct libraries (aggregates all param types in a variant)
cc_library(
    name = "ast_params",
    hdrs = [
        "include/ast_params.h",
        "include/ast_node_types.def",  # X-macro definition file
    ],
    includes = ["include"],
    deps = [
        ":limit_params",
        ":sort_params",
        ":set_metadata_params",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "logical_params",
    hdrs = ["include/logical_params.h"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)

# Node-specific parameter libraries
cc_library(
    name = "limit_params",
    hdrs = ["src/ast_params/limit_params.h"],
    strip_include_prefix = "src/ast_params",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "sort_params",
    hdrs = ["src/ast_params/sort_params.h"],
    strip_include_prefix = "src/ast_params",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "set_metadata_params",
    hdrs = ["src/ast_params/set_metadata_params.h"],
    strip_include_prefix = "src/ast_params",
    visibility = ["//visibility:public"],
)

# Library target
cc_library(
    name = "toy_lib",
    srcs = ["src/lib.cpp"],
    hdrs = ["include/lib.h"],
    includes = ["include"],
    deps = [":parse_node", ":ast_node"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parse_node",
    srcs = ["src/parse_node.cpp"],
    hdrs = ["include/parse_node.h"],
    includes = ["include"],
    deps = [":ast_params"],  # Now depends on AstParams variant
    visibility = ["//visibility:public"],
)

cc_library(
    name = "limit_parse_node",
    srcs = ["src/parse_nodes/limit_node.cpp"],
    hdrs = ["src/parse_nodes/limit_node.h"],
    includes = ["include"],
    deps = [
        ":parse_node",
        ":limit_params",
    ],
    visibility = ["//visibility:public"],
    # alwayslink needed for runtime registration
    alwayslink = 1,
)

cc_library(
    name = "sort_parse_node",
    srcs = ["src/parse_nodes/sort_node.cpp"],
    hdrs = ["src/parse_nodes/sort_node.h"],
    includes = ["include"],
    deps = [
        ":parse_node",
        ":sort_params",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

cc_library(
    name = "set_metadata_parse_node",
    srcs = ["src/parse_nodes/set_metadata_node.cpp"],
    hdrs = ["src/parse_nodes/set_metadata_node.h"],
    includes = ["include"],
    deps = [
        ":parse_node",
        ":set_metadata_params",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

# Combined parse nodes implementation
cc_library(
    name = "parse_nodes_impl",
    deps = [
        ":limit_parse_node",
        ":sort_parse_node",
        ":set_metadata_parse_node",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ast_node",
    srcs = [],
    hdrs = ["include/ast_node.h"],
    includes = ["include"],
    deps = [
        ":logical_params",
    ],  # Minimal deps, uses forward declarations
    visibility = ["//visibility:public"],
)

cc_library(
    name = "limit_ast_nodes",
    srcs = ["src/ast_nodes/limit_ast_node.cpp"],
    hdrs = ["src/ast_nodes/limit_ast_node.h"],
    includes = ["include"],
    deps = [
        ":ast_node",
        ":logical_node",  # Needed for createLogicalNode() implementation
        ":limit_params",
        ":limit_logical_nodes",  # Needed for the template specialization in .cpp
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

cc_library(
    name = "sort_ast_nodes",
    srcs = ["src/ast_nodes/sort_ast_node.cpp"],
    hdrs = ["src/ast_nodes/sort_ast_node.h"],
    includes = ["include"],
    deps = [
        ":ast_node",
        ":logical_node",
        ":sort_params",
        ":sort_logical_nodes",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

cc_library(
    name = "set_metadata_ast_nodes",
    srcs = ["src/ast_nodes/set_metadata_ast_node.cpp"],
    hdrs = ["src/ast_nodes/set_metadata_ast_node.h"],
    includes = ["include"],
    deps = [
        ":ast_node",
        ":logical_node",
        ":set_metadata_params",
        ":set_metadata_logical_nodes",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

# Combined AST nodes implementation
cc_library(
    name = "ast_nodes_impl",
    deps = [
        ":limit_ast_nodes",
        ":sort_ast_nodes",
        ":set_metadata_ast_nodes",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "logical_node",
    srcs = ["src/logical_node.cpp"],
    hdrs = ["include/logical_node.h"],
    includes = ["include"],
    deps = [":logical_params"],  # Only depends on logical_params, not full ast_node
    visibility = ["//visibility:public"],
)

# Node transformer library - bridges parse_node and ast_node
cc_library(
    name = "node_transformer",
    srcs = ["src/node_transformer.cpp"],
    hdrs = ["include/node_transformer.h"],
    includes = ["include"],
    deps = [
        ":parse_node",
        ":ast_node",
        ":param_type",
        ":ast_params",
        ":limit_ast_nodes",
        ":sort_ast_nodes",
        ":set_metadata_ast_nodes",
    ],
    visibility = ["//visibility:public"],
)

# AST to logical transformer library - bridges ast_node and logical_node
cc_library(
    name = "ast_to_logical_transformer",
    srcs = ["src/ast_to_logical_transformer.cpp"],
    hdrs = ["include/ast_to_logical_transformer.h"],
    includes = ["include"],
    deps = [
        ":ast_node",
        ":logical_node",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "limit_logical_nodes",
    srcs = ["src/logical_nodes/limit_logical_node.cpp"],
    hdrs = ["src/logical_nodes/limit_logical_node.h"],
    includes = ["include"],
    deps = [
        ":logical_node",
        ":limit_params",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

cc_library(
    name = "sort_logical_nodes",
    srcs = ["src/logical_nodes/sort_logical_node.cpp"],
    hdrs = ["src/logical_nodes/sort_logical_node.h"],
    includes = ["include"],
    deps = [
        ":logical_node",
        ":sort_params",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

cc_library(
    name = "set_metadata_logical_nodes",
    srcs = ["src/logical_nodes/set_metadata_logical_node.cpp"],
    hdrs = ["src/logical_nodes/set_metadata_logical_node.h"],
    includes = ["include"],
    deps = [
        ":logical_node",
        ":set_metadata_params",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
)

# Combined logical nodes implementation
cc_library(
    name = "logical_nodes_impl",
    deps = [
        ":limit_logical_nodes",
        ":sort_logical_nodes",
        ":set_metadata_logical_nodes",
    ],
    visibility = ["//visibility:public"],
)

# Main application
cc_binary(
    name = "toy_app",
    srcs = ["src/main.cpp"],
    deps = [
        ":toy_lib",
        ":parse_nodes_impl",
        ":ast_nodes_impl",
        ":logical_nodes_impl",
        ":node_transformer",
        ":ast_to_logical_transformer",
    ],
)

# Unit tests
cc_test(
    name = "unit_tests",
    srcs = ["tests/test_lib.cpp"],
    deps = [
        ":toy_lib",
        "@googletest//:gtest_main",
    ],
)

